if(Boost_INCLUDE_DIRS)
    set(INCLUDES ${Boost_INCLUDE_DIRS})
    set(LIBS ${Boost_LIBRARIES})
else(Boost_INCLUDE_DIRS)
    set(LIBS Boost::boost)
endif(Boost_INCLUDE_DIRS)
include_directories(
    ${PROJECT_SOURCE_DIR}
    ${INCLUDES}
    )
if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    set(COMPILE_DEFINITIONS DEBUG_EBEAMPARSER)
else()
    set(COMPILE_DEFINITIONS "")
endif()

add_executable(test_ebeam_bison test_bison.cpp)
set_target_properties(test_ebeam_bison PROPERTIES OUTPUT_NAME "test_bison")
target_link_libraries(test_ebeam_bison PRIVATE ebeamparser ${LIBS})
if(COMPILE_DEFINITIONS)
    target_compile_definitions(test_ebeam_bison PRIVATE ${COMPILE_DEFINITIONS})
endif(COMPILE_DEFINITIONS)
if(INSTALL_LIMBO)
    install(TARGETS test_ebeam_bison DESTINATION test/parsers/ebeam)
endif(INSTALL_LIMBO)

#add_executable(test_ebeam_spirit test_spirit.cpp)
#set_target_properties(test_ebeam_spirit PROPERTIES OUTPUT_NAME "test_spirit")
#if(COMPILE_DEFINITIONS)
#    target_compile_definitions(test_ebeam_spirit PRIVATE ${COMPILE_DEFINITIONS})
#endif(COMPILE_DEFINITIONS)
if(INSTALL_LIMBO)
	#install(TARGETS test_ebeam_spirit DESTINATION test/parsers/ebeam)
    install(DIRECTORY benchmarks DESTINATION test/parsers/ebeam)
endif(INSTALL_LIMBO)

